--- a/src/components/front/front-edu/pages/vgu2025cpp/m1.html
+++ b/src/components/front/front-edu/pages/vgu2025cpp/m1.html
@@ -28,6 +28,10 @@
   <p><a href="#p3.4">3.4 Присваивание объектов (46)</a></p>
   <p><a href="#p3.5">3.5 Передача объектов в фугкцию и возвращение объекта. Конструктор копирования (52)</a></p>
   <p><a href="#p3.6">3.6 Встраиваемые функции (61)</a></p>
+  <p><a href="#p3.7">3.7 Статические компоненты класса (63)</a></p>
+  <p><a href="#p3.8">3.8 Композиция классов (65)</a></p>
+  <p><a href="#p3.9">3.9 Вложенные классы (69)</a></p>
+  <p><a href="#p4">Библиографический список (74)</a></p>
 </article>
 
 
@@ -1311,4 +1315,269 @@ Vector3D Vector3D::operator+(const Vector3D &b) {
 </pre>
 
   <p>Методы класса можно писать внутри класса. Методы mod и projection написаны внутри класса. Можно поместить прототип метода внутри класса, а его определение написать вне класса, как у оператора "+".</p>
+  <p>Первый способ используется для простых и коротких методов, которые не предполагается изменять. Описание классов помещают в заголовочные файлы, которые включаются в программу с помощью директивы #include. В этом случае компилятор генерирует машинные инструкции, которые непосредственно вставляются в текст. Это снижает затраты на их исполненияа, поскольку нет механизма вызова функций и возврата из функции. То есть такие методы становятся inline или встраиваемыми.</p>
+  <p>Второй способ используется для сложных методов. Затрачивается время на вызов таких функций и возврат из них. Однако при добавлении ключевого слова inline они будут себя вести также как и в первом случае.</p>
+
+<pre>
+inline Vector3D Vector3D::operator+(const Vector3D &b) {
+  return Vector3D(x + b.x, y + b.y, z + b.z);
+}
+</pre>
+
+  <p>Теперь оператор "+" станет встраиваемой функцией.</p>
+  <p>inline не является командой для компилятора, это просьба сделать метод встраиваемым. Компилятор сам решает делать функцию встраиваемой или нет.</p>
+</article>
+
+
+<!-- 3.7 Статические компоненты класса -->
+<article class="article">
+  <div class="anchor" id="p3.7"></div>
+  <h3>3.7 Статические компоненты класса</h3>
+
+  <p>Переменные и функции, объявленные вне класса или функции с описателем static, имеют область действия, ограниченную файлом, в котором они объявлены.</p>
+  <p>Переменные с описателем static, объявленные внутри функции имеют область действия, ограниченную функцией, в которой они объявлены, но сохраняют свои значения после выхода из функции и инициализируются только при первом обращении к функции.</p>
+  <p>Поля класса, объявленные с описателем static являются общими для всех объектов этого класса и размещаются в памяти отдельно от данных каждого объекта.</p>
+  <p>К статическим полям класса можно обратиться по имени класса или по имени объекта класса. К статическим полям класса можно обращаться до создания объектов класса. Однако статическое поле класса обязательно должно быть инициализировано вне описания класса.</p>
+
+<pre>
+class TBase {
+  static int nw;
+  int size;
+  int count;
+  int maxCount;
+  int delta;
+};
+
+int TBase::nw = 1;
+</pre>
+
+  <p>Если описание класса производится в заголовочном файле, то инициализация статической переменной класса помещается в файл .cpp содержащий описание методов класса. Если класс определен непосредственно в файле с кодом, то инициализация статической переменной класса производится сразу под классом.</p>
+  <p>Если статические поля объявлены как private, то для доступа к ним можно использовать статические методы, которые могут вызываться до создания экземпляров этого класса и имеют доступ только к статическим полям класса.</p>
+
+<pre>
+class X {
+  int x1, x2;
+  static int sx1, sx2;
+
+public:
+  static void fsx(int _sx1, int _sx2) {
+    sx1 = _sx1;
+    sx2 = _sx2;
+  }
+};
+
+int X::sx1 = 1;
+int X::sx2 = 2;
+</pre>
+
+<pre>
+int main() {
+  X::fsx(3, 4);
+}
+</pre>
+</article>
+
+
+<!-- 3.8 Композиция классов -->
+<article class="article">
+  <div class="anchor" id="p3.8"></div>
+  <h3>3.8 Композиция классов</h3>
+
+  <p><strong>Композиция</strong> это использование объектов существующих классов внутри новых классов.</p>
+  <p>Напишем класс X, который нам нужно многократно использовать.</p>
+
+<pre>
+class X {
+  int i;
+
+public:
+  X() { i = 0; }
+  void set(int ii) { i = ii; }
+  int read() { return i; }
+  int permute() { return i = i * 47; }
+};
+</pre>
+
+  <p>Напишем класс Y, в котором объявлена переменная класса X.</p>
+
+<pre>
+class Y {
+  int i;
+
+public:
+  X x; // внутренний объект
+  Y() { i = 0; }
+  void f(int ii) { i = ii; }
+  int g() { return i; }
+};
+</pre>
+
+<pre>
+int main() {
+  Y y;
+  y.f(47);
+  y.x.set(37); // обращение к внутреннему объекту
+}
+</pre>
+
+  <p>На практике внутренние объекты объявляются закрытыми, доступ к ним предоставляется методами в соответствующем классе, что позволяет изменять реализацию открытого интерфейса нового класса (называемого <strong>композитным</strong>).</p>
+
+<pre>
+class Y {
+  int i;
+  X x;
+
+public:
+  Y() {i = 0; }
+  void f(int ii) { i = ii; x.set(ii); }
+  int g() { return i * x.read(); }
+  void permute() { x.permute(); }
+};
+</pre>
+
+<pre>
+int main() {
+  Y y;
+  y.f(47);
+  y.permute();
+}
+</pre>
+
+  <p>В приведенном примере функция внутреннего объекта permute() переносится в интерфейс композитного класса, а остальные функции класса X используются в функциях класса Y.</p>
+
+  <p>Рассмотрим класс Car</p>
+
+<pre>
+class Engine {
+public:
+  void start() {}
+  void rev() {}
+  void stop() {}
+};
+
+class Wheel {
+public:
+  void inflate(int psi) {}
+};
+
+class Window {
+public:
+  void rollup() {}
+  void rolldown() {}
+};
+
+class Door {
+public:
+  Window window;
+  void open() {}
+  void close() {}
+};
+
+class Car {
+public:
+  Engine engine;
+  Wheel wheel[4];
+  Door left, right;
+};
+</pre>
+
+<pre>
+int main() {
+  Car car;
+  car.left.window.rollup();
+  car,wheel[0].inflate(72);
+}
+</pre>
+
+  <p>Композитный класс Car объявляет внутренние объекты открытыми.</p>
+</article>
+
+
+<!-- 3.9 Вложенные классы -->
+<article class="article">
+  <div class="anchor" id="p3.9"></div>
+  <h3>3.9 Вложенные классы</h3>
+
+  <p>Класс, объявленный внутри другого класса, называется <strong>вложенным классом</strong>. Вложение не создает член класса, а определяет тип, который известен лишь локально в содержащем его классе. Вложенные классы создаются как вспомогательные при реализации другого класса, чтобы избежать конфликта имен.</p>
+
+  <p>Рассмотрим класс Queue, реализующий очередь.</p>
+
+<pre>
+class Queue {
+private:
+  struct Node {
+    Item item;
+    Node* next;
+  }
+};
+</pre>
+
+  <p>Вложенная структура похожа на вложенный класс, но не имеет всех возможностей класса, например нет заданного конструктора.</p>
+  <p>Объекты Node создаются только в методе добавления в очередь.</p>
+
+<pre>
+bool Queue::enqueuer(const Item& item) {
+  if (isfull()) {
+    // если очередь заполнена
+    return false
+  }
+  Node* add = new Node;
+  add->item = item;
+  add->next = NULL;
+}
+</pre>
+
+  <p>В этом коде после создания объекта Node его переменным присваиваются значения. Такие действия уместнее выполнять в конструкторе. Добавим конструктор в класс Queue.</p>
+
+<pre>
+class Queue {
+  class Node {
+  public:
+    Item item;
+    Node* next;
+    Node(const Item& i) : item(i), next(0) {}
+  };
+};
+
+bool Queue::enqueuer(const Item& item) {
+  if (isfull()) {
+    return false;
+  }
+  Node* add = new Node(item);
+}
+</pre>
+
+  <p>В коде метода enqueuer теперь используется конструктор, что делает метод короче и надежнее.</p>
+  <p>В данном примере конструктор описан при объявлении класса. Если потребуется определить его вне класса, то нужно учитывать, что класс Node содержится внутри класса Queue. Это делается с помощью двух операций расширения области видимости.</p>
+  <code>Queue::Node::Node(const Item& i) : item(i), next(0) {}</code>
+
+  <p>Для доступа к вложенному классу надо помнить 2 вещи:</p>
+  <ol>
+    <li>Место объявления вложенного класса определяет его область видимости. Только в области видимости могут создаваться объекты этого класса.</li>
+    <li>Доступ к свойствам и методам определяют модификаторы private, protected, public.</li>
+  </ol>
+  <p>Если вложенный класс объявлен в закрытом разделе базового класса, то он известен только этому классу и неизвестен извне, а также неизвестен его наследникам.</p>
+  <p>Если вложенный класс объявлен в защищенном разделе базового класса, то он известен этому классу и его наследникаи и неизвестен извне.</p>
+  <p>Если вложенный класс объявлен в открытом разделе базового класса, то для доступа к нему вне базового класса необходимо использовать операцию расширения области видимости (::).</p>
+  <code>Queue::Node node;</code>
+
+  <p>Если класс оказывается в области видимости, вступают в действие правила управления доступом к нему. Все объекты вложенного класса обычно делают открытыми, для доступа к ним из базового класса. Это не вредит остальной программе, так как все равно вложенный класс виден только внутри базового.</p>
+</article>
+
+
+<!-- Библиографический список -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Библиографический список</h3>
+
+  <ol>
+    <li>Павловская. C/C++. Процедурное и объектно-ориентированное программирование. 2015. 496с</li>
+    <li>Шилдт. Самоучитель C++. 1997. 512с</li>
+    <li>Бабэ. Просто и ясно о Borland C++. Версии 4.0 и 4.5. 1997. 512с</li>
+    <li>Страуструп. Язык программирования C++. 1995. 400с</li>
+    <li>Клочков. Введение в объектно-ориентированное программирование. 1995. 70с</li>
+    <li>Элиас. Справочное руководство по языку C++ с комментариями. 1992. 371с</li>
+    <li>Керниган, Ритчи. Язык программирования Си. 1989. 428с</li>
+    <li>Ирэ Пол. Объектно-ориентированное программирование с использованием C++. 1995. 386с</li>
+  </ol>
 </article>
