--- a/src/components/front/front-edu/pages/vgu2025cpp/m2.html
+++ b/src/components/front/front-edu/pages/vgu2025cpp/m2.html
@@ -20,6 +20,10 @@
   <p><a href="#p4.2">4.2 Конструкторы и деструкторы при наследовании (9)</a></p>
   <p><a href="#p4.3">4.3 Пример построения классов при наследовании (14)</a></p>
   <p><a href="#p4.4">4.4 Совместимость типов при наследовании (20)</a></p>
+  <p><a href="#p5">5 Виртуальные методы (23)</a></p>
+  <p><a href="#p5.1">5.1 Раннее и позднее связывание (23)</a></p>
+  <p><a href="#p5.2">5.2 Виртуальные функции (27)</a></p>
+  <p><a href="#p5.3">5.3 Применение виртуальных функций при использовании указателей на базовые классы (29)</a></p>
 </article>
 
 
@@ -472,4 +476,199 @@ void Circle::Hide() {
   <div class="anchor" id="p4.4"></div>
   <h3>4.4 Совместимость типов при наследовании</h3>
 
+  <p>Объекты одного и того же типа (класса) являются совместимыми. Их можно присваивать друг другу. Объекты производного класса совместимы с объектами базового класса, но не наоборот. Это значит, что объекты производного класса можно использовать вместо объектов базового класса. Совместимость распространаятеся от потомков к предку.</p>
+  <p>Три формы совместимости:</p>
+  <ol>
+    <li>Между экземплярами объектов</li>
+    <li>Между указателями на объекты</li>
+    <li>Между формальными и фактическими параметрами функций</li>
+  </ol>
+
+<pre>
+Point APoint, *ptrPoint;
+Circle ACircle, *ptrCircle;
+
+APoint = ACircle;
+APoint = *ptrCircle;
+ptrPoint = &amp;ACircle;
+ptrPoint = ptrCircle;
+</pre>
+
+  <p>При присваивании тот, кто присваивается должен быть не меньше, чем тот, кому присваивается. Порожденный тип содержит все поля родительского типа и что-то еще свое. Поэтому порожденный тип всегда не меньше родительского типа и может быть ему присвоен.</p>
+
+<pre>
+class Parent {
+protected:
+  int m;
+
+public:
+  Parent(int value): m(value) {}
+  const char* getName() {return "Parent";}
+  int getValue() {retirn m;}
+};
+
+class Child : public Parent {
+public:
+  Child(int value): Parent(value) {}
+  const char* getName() {return "Child";}
+  int getValueDoubled() {return m * 2;}
+};
+</pre>
+
+<pre>
+int main() {
+  Child child(7);
+  cout &lt;&lt; "child is a " &lt;&lt; child.getName()
+  &lt;&lt; " value = " &lt;&lt; child.getValue() &lt;&lt; '\n';
+
+  Parent &rParent = child;
+  cout &lt;&lt; "rParent is a " &lt;&lt; rParent.getName()
+  &lt;&lt; " value = " &lt;&lt; rParent.getValue() &lt;&lt; '\n';
+
+  Parent *pParent = &amp;child;
+  cout &lt;&lt; "pParent is a " &lt;&lt; pParent->getName()
+  &lt;&lt; " value = " &lt;&lt; pParent->getName() &lt;&lt; '\n';
+}
+</pre>
+
+  <p>Результат</p>
+<pre>
+child is a Child value = 7
+rParent is a Parent value = 7
+pParent is a Parent value = 7
+</pre>
+
+  <p>rParent и pParent являются ссылкой и указателем класса Parent. Они не имеют доступа к методу Child::getName(). Поэтому будет вызываться метод Parent::getName(). Также они не имеют доступа к методу Child::getValueDoubled().</p>
+</article>
+
+
+<!-- 5 Виртуальные методы -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>5 Виртуальные методы</h3>
+
+</article>
+
+
+<!-- 5.1 Раннее и позднее связывание -->
+<article class="article">
+  <div class="anchor" id="p5.1"></div>
+  <h3>5.1 Раннее и позднее связывание</h3>
+
+  <p>Чтобы показать или спрятать точку мы использовали методы Point.Show() и Point.Hide(). Класс Circle это наследник класса Point. Чтобы показать или спрятать окружность мы написали методы Circle.Show() и Circle.Hide().</p>
+  <p>Чтобы двигать точку по экрану мы использовали метод Point.MoveTo(). В методе Point.MoveTo() вызываются методы Pojnt.Show() и Point.Hide() поэтому у нас двигается именно точка. Чтобы двигать окружность по экрану мы написали метод Circle.MoveTo(). В методе Circle.MoveTo() вызываются методы Circle.Show() и Circle.Hide() поэтому у нас двигается именно окружность.</p>
+  <p>Компилятор сначала ищет метод внутри текущего класса. Если метод не найден, то компилятор ищет его у родительского класса.</p>
+  <p>Принятие решения на этапе компиляции относится к механизму <strong>раннего связывания</strong>.</p>
+  <p>В процессе компиляции программы компилятор конвертирует каждую инструкцию программы в одну или несколько строк машинного кода. Каждой строке машинного кода присваивается собственный уникальный адрес. То же самое происходит и при обработке функций: когда компилятор встречает функцию, она конвертируется в машинный код и получает свой адрес.</p>
+  <p>Связывание – это процесс, который используется для конвертации идентификаторов (таких как имена переменных или функций) в адреса.</p>
+  <p>Раннее связывание означает, что компилятор может напрямую связать имя идентификатора (например, имя функции или переменной) с машинным адресом. Поэтому, когда компилятор встречает вызов функции, он заменяет его инструкцией машинного кода, которая сообщает процессору о том, как перейти к адресу функции.</p>
+  <p>К двум классам Point и Circle добавим еще один класс Rectangle, который будет наследником класса Point. Координаты x и y будут обозначать верхний левый угол прямоугольника. Добавим к ним два поля length и width для длины и широты и переопределим методы Show(), Hide(), MoveTo().</p>
+  <p>Мы хотим работать с парами однотипных объектов, отображая их на экране. Напишем две перегруженные функции для отображения пары окружностей и пары прямоугольников.</p>
+
+<pre>
+void showPair(const Circle& c1, const Circle& c2) {
+  c1.Show();
+  c2.Show();
+}
+
+void showPair(const Rectangle& r1, const Rectangle& r2) {
+  r1.Show();
+  r2.Show();
+}
+</pre>
+
+  <p>При создании еще наследников класса Point, для каждого из них мы вынуждены перегружать функцию showPair(). Логичнее описать единственный экземпляр функции showPair(), которы мог бы работыть с объектами базового класса и со всеми наследниками.</p>
+
+<pre>
+void showPair(const Point& p1, const Point& p2) {
+  p1.Show();
+  p2.Show();
+}
+</pre>
+
+  <p>Вызовем теперь функцию showPair() для наследников класса Point.</p>
+<pre>
+Circle circle1(0, 0, 1), circle2(5, 6, 10);
+Rectangle rect1(-1, -1, 10, 20), rect2(2, 5, 1, 8);
+showPair(circle1, circle2);
+showPair(rect1, rect2);
+showPair(circle1, rect1);
+</pre>
+
+  <p>В результате на экране отобразится лишь по две точки, потому что в каждом случае будет вызван метод Show() базового класса Point.</p>
+
+  <p>Решить эту проблему можно используя виртуальные методы, реализуемые с помощью механизма <strong>позднего связывания</strong>.</p>
+  <p>Для реализации механизма позднего связывания используются указатели на функции. Указатель на функию - это тип указателя, который указывает на функцию вместо переменной. Теперь функция может быть вызвана как через оператор вызова функции так и через указатель на функцию. Вызов функции через указатель на функцию называется <strong>непрямой ( или косвенный) вызов функции</strong>.</p>
+  <p>Недостаток позднего связывания в том, что процессор должен сперва прочитать адрес, хранящийся в указателе, а затеп только перейти к этому адресу. Этот дополнительный шаг замедляет процесс вызова функции.</p>
+  <p>Преимущество позднего связывания в том, что решение о том какую функцию нужно вызвать, может быть отложено до запуска самой программы.</p>
+  <p>Отличие раннего и позднего связывания в том, что при раннем связывании функция связывается с адресом на этапе компиляции, а при позднем связывании - на этапе выполнения программы.</p>
+</article>
+
+
+<!-- 5.2 Виртуальные функции -->
+<article class="article">
+  <div class="anchor" id="p5.2"></div>
+  <h3>5.2 Виртуальные функции</h3>
+
+  <p><strong>Виртуальные методы</strong> описанные в классах потомках замещают собой эти методы в классах предках, если вызываются на объектах, принадлежащих потомкам.</p>
+  <p>Виртуальные методы обеспечивают полиморфизм классов. Функции, описанные в базовом классе как виртуальные, могут быть модифицированы в производных классах, причем связывание будет происходить не на этапе компиляции, а в момент обращения к данному методу.</p>
+
+  <p>Напишем классы Point и Circle с виртуальными методами.</p>
+
+<pre>
+class Point {
+public:
+  virtual void Show();
+  virtual void Hide();
+  void MoveTo(int _x. int _y);
+};
+
+class Circle : public Point {
+public:
+  virtual void Show();
+  virtual void Hide();
+};
+</pre>
+
+  <p>В классе Circle нет метода MoveTo(), он наследуется из класса Point. Но при вызове метода Point.MoveTo() будут вызываться методы Point.Show() и Point.Hide(), а при вызове метода Circle.MoveTo() будут вызываться методы Circle.Show() и Circle.Hide(). Поэтому при вызове метода MoveTo() для объекта класса Circle по экрану будет перемещаться окружность.</p>
+  <p>Преимущество виртуальных функций - чтобы новые дочерние классы автоматически работали со старым кодом, без необходимости внесения изменений со стороны программиста.</p>
+  <p>Теперь вернемся к функции showPair() для отображения пары фигур. Если сделать метод Show() виртуальным, то функция showPair() правильно отобразит переданные ей в качестве параметров объекты.</p>
+
+<pre>
+void showPair(const Point& p1, const Point& p2) {
+  p1.Show();
+  p2.Show();
+}
+</pre>
+</article>
+
+
+<!-- 5.3 Применение виртуальных функций при использовании указателей на базовые классы -->
+<article class="article">
+  <div class="anchor" id="p5.3"></div>
+  <h3>5.3 Применение виртуальных функций при использовании указателей на базовые классы</h3>
+
+  <p>Указатель на базовый класс может использоваться в качестве указателя на любой производный класс от базового.</p>
+
+<pre>
+Point p(100, 20);
+Circle c(20, 30, 10);
+Point *pPtr;
+pPtr = &amp;p; // указывает на объект базового класса
+pPtr = &amp;c; // указывает на объкт производного класса
+</pre>
+
+  <p>При помощи указателя на объект можно вызвать метод этого объекта через оператор стрелка "->".</p>
+  <code>pPtr->MoveTo(10, 10);</code>
+  <p>С помощью указателя можно вызвать и виртуальные методы.</p>
+  <p>Вызовем виртуальный метод объекта базового класса.</p>
+<pre>
+pPtr = &amp;p;
+pPtr->Show(10, 10);
+</pre>
+  <p>Вызовем виртуальный метод объекта производного класса.</p>
+<pre>
+pPtr = &amp;c;
+pPtr->Show(10, 10);
+</pre>
 </article>
