--- a/src/components/alg/alg-base/alg-yandex/pages/elem-ya-cup2025.html
+++ b/src/components/alg/alg-base/alg-yandex/pages/elem-ya-cup2025.html
@@ -187,6 +187,11 @@ int main() {
 4
 </pre>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Для каждой ячейки посчитаем число совпадающих ячеек вниз.</p>
+  </details>
 </article>
 
 
@@ -225,6 +230,11 @@ int main() {
     <h4>Пример 2</h4>
     <code>4 3</code>
     <code>0</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Это динамическое программирование. Храним вектор из числа способов попасть в каждую ячейку. Есть только один способ попасть в первую ячейку DP[1] = 1. Следующие ячейки считаются как числа Фибоначчи DP[i] = DP[i-1] + DP[i-2]. Но есть предварительное условие для каждого числа, в клетке не должно быть препятствия. Ответ лежит в DP[n].</p>
   </details>
 </article>
 
